--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-consumer/src/main/resources/spring/dubbo-consumer.properties
@@ -18,4 +18,7 @@
 #
 
 dubbo.application.name=dubbo-demo-annotation-consumer
-dubbo.registry.address=multicast://224.5.6.7:1234
+dubbo.registry.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metadata-report.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metric.port=20882
+dubbo.metric.protocol=dubbo
