--- a/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
+++ b/dubbo-demo/dubbo-demo-annotation/dubbo-demo-annotation-provider/src/main/resources/spring/dubbo-provider.properties
@@ -20,3 +20,7 @@
 dubbo.application.name=dubbo-demo-annotation-provider
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
+dubbo.registry.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metadata-report.address=zookeeper://zk-test-master1.meizu.mz:2181
+dubbo.metric.port=20882
+dubbo.metric.protocol=dubbo
